# Tape

./: .gitignore  CMakeLists.txt  FileTape.cpp  FileTape.h  README.md  Tape.h  config.cpp  config.h  config.ini  main.cpp  sorting.cpp  sorting.h  tape  yadro.slnx  yadro.vcxproj  yadro.vcxproj.filters
tests/: test_FileTape.cpp  test_sorting.cpp
